# holocron

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  Makefile  README.md  pyproject.toml
src/holocron/: __init__.py  constants.py  models.py  nfo.py
src/holocron/augmentor/: stub.py
src/holocron/extractor/: cli.py  plex_client.py  writer.py
src/holocron/materializer/: cli.py  loader.py  parser.py  schema.py
src/holocron/server/: main.py  queries.py
tests/: conftest.py  test_extractor.py  test_materializer.py  test_models.py  test_nfo.py  test_server.py
tests/fixtures/: inception.nfo  minimal.nfo  the_matrix.nfo
